// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table supports responsive table 1`] = `
<div>
  <table
    className="ds-c-table ds-c-lg-table--stacked"
    role="table"
  >
    <TableCaption
      className="foo-caption"
      key=".0"
    >
      Foo
    </TableCaption>
  </table>
</div>
`;

exports[`Table supports scroll table 1`] = `
<div
  aria-labelledby="caption-5"
  aria-live="polite"
  aria-relevant="additions"
  className="ds-c-table__wrapper"
  role="region"
  tabIndex={null}
>
  <table
    className="ds-c-table"
    role="table"
  >
    <TableCaption
      _id="caption-5"
      _scrollActive={false}
      _scrollableNotice={
        <Alert
          className="ds-u-margin-y--1 ds-u-font-size--small ds-u-font-weight--normal"
          headingLevel="3"
          role="status"
        >
          <p
            className="ds-c-alert__text"
          >
            Scroll using arrow keys to see more
          </p>
        </Alert>
      }
      className="foo-caption"
      key=".0"
    >
      Foo
    </TableCaption>
  </table>
</div>
`;

exports[`Table supports zebra stripe 1`] = `
<div>
  <table
    className="ds-c-table ds-c-table--striped"
    role="table"
  >
    <TableCaption
      className="foo-caption"
      key=".0"
    >
      Foo
    </TableCaption>
  </table>
</div>
`;
